@@ -1,16 +1,13 @@
 package software.sigma.internship.service.impl;
 
-import lombok.AllArgsConstructor;
-import org.modelmapper.ModelMapper;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import software.sigma.internship.dto.AnswerDto;
 import software.sigma.internship.dto.ResponseDto;
-import software.sigma.internship.dto.TestDto;
-import software.sigma.internship.dto.TestStatisticsDto;
-import software.sigma.internship.entity.Answer;
 import software.sigma.internship.entity.Response;
-import software.sigma.internship.entity.Student;
-import software.sigma.internship.entity.Test;
+import software.sigma.internship.mapper.AnswerMapper;
+import software.sigma.internship.mapper.ResponseMapper;
+import software.sigma.internship.mapper.TestMapper;
 import software.sigma.internship.repo.AnswerRepository;
 import software.sigma.internship.repo.ResponseRepository;
 import software.sigma.internship.repo.StudentRepository;
@@ -23,74 +20,70 @@ import software.sigma.internship.validator.exception.TestNotFoundException;
 import software.sigma.internship.validator.exception.UserNotFoundException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-@AllArgsConstructor
+@RequiredArgsConstructor
 public class ResponseServiceImpl implements ResponseService {
+
     private final ResponseRepository responseRepository;
     private final AnswerRepository answerRepository;
     private final StudentRepository studentRepository;
     private final TestStatisticsService testStatisticsService;
     private final TestRepository testRepository;
-    private final ModelMapper responseToStatisticsMapper;
-    private final ModelMapper allResponsesMapper;
+    private final ResponseMapper responseMapper;
+    private final TestMapper testMapper;
+    private final AnswerMapper answerMapper;
     private final ScoreCounter scoreCounter;
 
     @Override
     public ResponseDto findById(Long id) {
-        Response response = responseRepository.findById(id).orElseThrow(() -> new TestNotFoundException(id));
-        return responseToStatisticsMapper.map(response, ResponseDto.class);
+        var response = responseRepository.findById(id).orElseThrow(() -> new TestNotFoundException(id));
+        return responseMapper.mapToResponseDto(response);
     }
 
     @Override
     public List<ResponseDto> findByStudent(Long studentId) {
-        Student student = studentRepository.findById(studentId).orElseThrow(() -> new UserNotFoundException(studentId));
-        List<Response> responses = student.getResponses();
-        return getResponseDtoList(responses);
-    }
-
-    private List<ResponseDto> getResponseDtoList(List<Response> responses) {
-        return responses.stream()
-                .map(response -> allResponsesMapper.map(response, ResponseDto.class))
-                .collect(Collectors.toList());
+        return studentRepository.findById(studentId)
+            .orElseThrow(() -> new UserNotFoundException(studentId))
+            .getResponses()
+            .stream()
+            .map(responseMapper::mapForList)
+            .toList();
     }
 
     @Override
-    public ResponseDto save(ResponseDto response) {
-        Long testId = response.getTest().getId();
-        Test test = testRepository.findById(testId).orElseThrow(() -> new TestNotFoundException(testId));
-        response.setTest(responseToStatisticsMapper.map(test, TestDto.class));
+    public ResponseDto save(ResponseDto responseDto) {
+        var testId = responseDto.getTest().getId();
+        var test = testRepository.findById(testId).orElseThrow(() -> new TestNotFoundException(testId));
+        responseDto.setTest(testMapper.mapForTeacher(test));
 
-        response.setNumberOfTry(getNumberOfNewTry(response));
-        response.setAnswers(getAnswerDtoList(response));
+        responseDto.setNumberOfTry(getNumberOfNewTry(responseDto));
+        responseDto.setAnswers(getAnswerDtoList(responseDto));
 
-        response.setResult(scoreCounter.countResult(response));
+        responseDto.setResult(scoreCounter.countResult(responseDto));
 
-        testStatisticsService.save(responseToStatisticsMapper.map(response, TestStatisticsDto.class));
+        testStatisticsService.save(responseMapper.mapToTestStatisticsDto(responseDto));
 
-        Response newResponse = responseRepository.save(responseToStatisticsMapper.map(response, Response.class));
-        return responseToStatisticsMapper.map(newResponse, ResponseDto.class);
+        var newResponse = responseRepository.save(responseMapper.mapToResponse(responseDto));
+        return responseMapper.mapToResponseDto(newResponse);
     }
 
     private List<AnswerDto> getAnswerDtoList(ResponseDto response) {
         return response.getAnswers()
-                .stream()
-                .map(answerDto -> {
-                    Long answerDtoId = answerDto.getId();
-                    Answer answer = answerRepository.findById(answerDtoId)
-                            .orElseThrow(() -> new AnswerNotFoundException(answerDtoId));
-                    return responseToStatisticsMapper.map(answer, AnswerDto.class);
-                })
-                .collect(Collectors.toList());
+            .stream()
+            .map(answerDto -> {
+                var answerDtoId = answerDto.getId();
+                return answerRepository.findById(answerDtoId)
+                    .map(answerMapper::map)
+                    .orElseThrow(() -> new AnswerNotFoundException(answerDtoId));
+                }).toList();
     }
 
     private int getNumberOfNewTry(ResponseDto response) {
-        return responseRepository
-                .getFirstByStudentIdAndTestOrderByNumberOfTryDesc(
-                        response.getStudent().getId(),
-                        responseToStatisticsMapper.map(response.getTest(), Test.class))
-                .orElse(new Response())
-                .getNumberOfTry() + 1;
+        return responseRepository.getFirstByStudentIdAndTestOrderByNumberOfTryDesc(
+                response.getStudent().getId(),
+                testMapper.map(response.getTest()))
+            .orElse(new Response())
+            .getNumberOfTry() + 1;
     }
 }
