@@ -10,13 +10,10 @@ import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
-import software.sigma.internship.mongo.filters.exceptions.WrongQueryParam;
+import software.sigma.internship.mongo.filters.exceptions.WrongQueryParamException;
 
 import java.util.Date;
 import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @ControllerAdvice
 public class CustomGlobalExceptionHandler extends ResponseEntityExceptionHandler {
@@ -27,18 +24,18 @@ public class CustomGlobalExceptionHandler extends ResponseEntityExceptionHandler
     @ExceptionHandler({UserNotFoundException.class, TestNotFoundException.class,
             AnswerNotFoundException.class, QuestionNotFoundException.class})
     protected ResponseEntity<Object> handleNotFoundException(RuntimeException ex) {
-        int status = HttpStatus.NOT_FOUND.value();
+        var status = HttpStatus.NOT_FOUND.value();
         return getResponse(ex, status);
     }
 
-    @ExceptionHandler({WrongQueryParam.class, UserExistsWithEmailException.class})
+    @ExceptionHandler({WrongQueryParamException.class, UserExistsWithEmailException.class})
     protected ResponseEntity<Object> handleBadRequest(RuntimeException ex) {
-        int status = HttpStatus.BAD_REQUEST.value();
+        var status = HttpStatus.BAD_REQUEST.value();
         return getResponse(ex, status);
     }
 
     private static ResponseEntity<Object> getResponse(RuntimeException ex, int status) {
-        Map<String, Object> body = new LinkedHashMap<>();
+        var body = new LinkedHashMap<>();
         body.put(TIMESTAMP, new Date());
         body.put(STATUS, status);
         body.put("error", ex.getMessage());
@@ -51,15 +48,15 @@ public class CustomGlobalExceptionHandler extends ResponseEntityExceptionHandler
                                                                @NonNull HttpHeaders headers,
                                                                HttpStatus status, @NonNull WebRequest request) {
 
-        Map<String, Object> body = new LinkedHashMap<>();
+        var body = new LinkedHashMap<>();
         body.put(TIMESTAMP, new Date());
         body.put(STATUS, status.value());
 
-        List<String> errors = ex.getBindingResult()
+        var errors = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
                 .map(DefaultMessageSourceResolvable::getDefaultMessage)
-                .collect(Collectors.toList());
+                .toList();
 
         body.put("errors", errors);
 
